-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.11.0 FF
-
None
-
Debian testing, qtbase self-compiled from git dev as of c8b7db36a021d53f6a0b76fc31e45421f66c8439,
Orca 49.1
-
-
f50874b57 (dev), 9de665f0b (6.10)
When changing the value of a QSpinBox using the Up/Down keys, the Orca screen reader on Linux doesn't reliably announce the new value, but often instead announces an earlier value.
Steps to reproduce:
- Build and run this sample program on Linux
#include <QApplication> #include <QMainWindow> #include <QSpinBox> int main(int argc, char *argv[]) { QApplication a(argc, argv); QMainWindow w; QSpinBox* spinBox = new QSpinBox(&w); spinBox->setAccessibleName("MySpinBox"); spinBox->setRange(0, 1000); w.setCentralWidget(spinBox); w.show(); return a.exec(); }
- run the Orca screen reader
- move focus to the spinbox in the sample program
- press the Up key on the keyboard multiple times quickly
Actual result:
Each time the Up key is pressed, the value is increased by one as expected, but the Orca screen reader often announces a previous value, not the newly displayed one. (The attached screencast demonstrates this.)
Expected result:
Orca should always and consistently announce the new value.