a11y: Report editable/readonly state for QAbstractSpinBox

Depending on whether a QAbstractSpinBox is readonly,
either report QAccessible::State::readOnly or
QAccessible::State::editable.

Reporting the editable state also prevents the Orca screen
reader on Linux from announcing an obsolete cached value when
the spin box value changes, as Orca doesn't cache and reuse
the text if the object is editable. [1]

Extend the existing spinbox a11y test accordingly.

[1] https://gitlab.gnome.org/GNOME/orca/-/blob/be3ca7e458291e73c2551b8b575a684462b9ead2/src/orca/generator.py#L1087-1096

Fixes: QTBUG-141245
Change-Id: I85011e157df98a4b8735ed5b3c60adbe34a9d950
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit f50874b57da223096ec8c7f512ec85dcfa55316d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>